--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,16 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300;400&display=swap');
 
+button {
+    transition-duration: 0.4s;
+    color: whitesmoke;
+}
+  
+button:hover {
+    background-color: #fa5f5f;
+  }
+
 .round-button {
     display: inline-block;
     border-radius: 50%;
     background-color: #8e0000;
     width: 60px;
-    height: 60px;
-    color: #e6e6ee;
+    height: 60px;    
     transform: rotate(12deg);
     margin-top: 15px;
-    /* margin-right: 255px; */
     font-weight: bold;
+    transition-duration: 0.2s;
 }
 
 .round-button:hover {
@@ -52,20 +60,17 @@
 }
 
 .add-button {
-    background-color: #86eadc;
-    margin: 15px;
-    border-radius: 10px;
-    font-size: 12px;
-    font-weight: bold;
-    width: 200px;
-    height: 30px;
-    color: black;
-}
-
-.add-button:hover {
-    width: 205px;
-    height: 35px;
-}
+    background-color: #8e0000;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    /* transition-duration: 0.4s; */
+    border-radius: 4px;
+    margin: 50px;
+  }
 
 /*tablet*/
 @media screen and (min-width: 768px) {
