--- a/src/pages/NewsItemForm/NewsItemForm.css
+++ b/src/pages/NewsItemForm/NewsItemForm.css
@@ -5,7 +5,33 @@
     align-items: center;
 }
 
-
-.round-button {
-    margin-left: 475px;
+h3 {
+    margin: 30px;
 }
+
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+  }
+
+  input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+  }
+
+  input[type=text]:focus {
+    border: 3px solid #555;
+  }
+
+form > div {
+  text-align: center;
+}
+ 
